# MADS

./: .gitignore  CMakeLists.txt  CRYPTO.md  Dockerfile.in  MADS.code-workspace  README.md  WINDOWS.md  external.cmake  mads.ini  test.cpp
.github/: copilot-instructions.md
Docker/: README.md  cmd.sh  compose.yml
GUI/MADSMetadata/: CMakeLists.txt  colorrepository.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qagent.cpp  qjsonmodel.cpp  toggleswitch.cpp
GUI/MiroscicMetadata/: README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qagent.h
MongoDB/: pipelines.md
doc/: Doxyfile
iss/: environment.iss  events.iss
man/: CMakeLists.txt  broker.md  mads-broker.md  mads-dealer.md  mads-filter.md  mads-logger.md  mads-sink.md  mads-source.md  mads-worker.md  mads.md
scripts/: README.md  agent.py  command  logging  mads  mads-command  mads-logging  mads_agent.py  stress  stress.py  test_mads_agent.py
share/man/: CMakeLists.txt  mads-broker.md  mads-dealer.md  mads-filter.md  mads-logger.md  mads-plugin.md  mads-sink.md  mads-source.md  mads.md
share/templates/: CMakeLists.txt  README.md  filter.cpp  header.tpl  mads.ini  service.tpl  sink.cpp  source.cpp
src/: agent.cpp  agent.hpp  agent_c.cpp  agent_c.h  bridge.hpp  curve.hpp  dealer.hpp  dummy.hpp  exec_path.hpp  image.hpp  keypress.hpp  logger.hpp  mads.hpp.in  metadata.hpp  python.hpp  watcher.hpp  worker.hpp
src/main/: bridge.cpp  broker.cpp  dealer.cpp  dummy.cpp  feedback.cpp  filter.cpp  gettp.cpp  image.cpp  logger.cpp  mads.cpp  make_plugin.cpp  metadata.cpp  perf_assess.cpp  plugin_loader.cpp  python.cpp  sink.cpp  source.cpp  template.cpp  worker.cpp
src/plugin/: CMakeLists.txt  filter_default.cpp  sink_default.cpp  source_default.cpp
src/wrap/: .gitignore  CMakeLists.txt  Miroscic.py  agent.cpp  agent.swg  build.sh
test/: CMakeLists.txt  c_test.c  client.cpp  server.cpp
tools/: CMakeLists.txt  img_browser.cpp  mads-broker.service.in  mads-filter.service.in  mads-logger.service.in  mads-sink.service.in  mads-source.service.in
